--- a/QL_ThietBi/QL_ThietBi/Views/Kiemke/KiemKe.cshtml
+++ b/QL_ThietBi/QL_ThietBi/Views/Kiemke/KiemKe.cshtml
@@ -21,8 +21,10 @@
     <div class="row m-3 text-center">
         <h4 class="text-primary">DANH SÁCH PHIẾU GHI NHẬN HƯ HỎNG</h4>
         <div class="container">
-           
+            <a href="@Url.Action("Add_PhieuHH","Kiemke")">
                 <button type="submit" class="btn btn-primary ml-2 form-check-inline" style="float:right">Thêm mới</button>
+            </a>
+               
             
 
         </div>
