--- a/QL_ThietBi/QL_ThietBi/Views/Kiemke/DS_ThietBi.cshtml
+++ b/QL_ThietBi/QL_ThietBi/Views/Kiemke/DS_ThietBi.cshtml
@@ -13,7 +13,7 @@
                     <a href="@Url.Action("Kiemke","DS_ThietBi")">Danh sách thiết bị</a>
                 </li>
                 <li class="list-inline-item mb-0"><a href="@Url.Action("Kiemke","KiemKe")">Kiểm kê</a></li>
-                <li class="list-inline-item mb-0"><a href="#">Thanh lý</a></li>
+                <li class="list-inline-item mb-0"><a href="@Url.Action("ThanhLy","Kiemke")">Thanh lý</a></li>
 
             </ul>
         </div>
