--- a/QL_ThietBi/QL_ThietBi/Content/bootstrap-5.0.2-dist/css/MyCss.css
+++ b/QL_ThietBi/QL_ThietBi/Content/bootstrap-5.0.2-dist/css/MyCss.css
@@ -123,3 +123,74 @@ ul {
     height:40px;
     margin-right:10px;
 }
+
+#registerForm {
+    display: none;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 9999;
+    background-color: white;
+    padding: 20px;
+    border-radius: 10px;
+    width: 500px;
+}
+
+#overlay {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0,0,0,0.5);
+    z-index: 9998;
+}
+
+#registerButton {
+    padding: 10px 20px;
+    background-color: #007BFF;
+    color: white;
+    border-radius: 5px;
+    border: none;
+}
+
+    #registerButton:hover {
+        background-color: #0056b3;
+    }
+
+input[type="text"], input[type="password"], textarea, input[type=date], section {
+    width: 100%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    box-sizing: border-box;
+}
+
+input[type="submit"] {
+    width: 100%;
+    background-color: #0056b3;
+    color: white;
+    padding: 14px 20px;
+    margin-top: 10px;
+    border: none;
+    cursor: pointer;
+}
+
+    input[type="submit"]:hover {
+        background-color: #45a049;
+    }
+
+.close {
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+    cursor: pointer
+}
+
+#duocchon {
+    border-bottom: 3px solid green;
+    background-color: white
+}
