--- a/QL_ThietBi/QL_ThietBi/Views/Kiemke/KiemKe.cshtml
+++ b/QL_ThietBi/QL_ThietBi/Views/Kiemke/KiemKe.cshtml
@@ -13,7 +13,7 @@
                     <a href="@Url.Action("DS_ThietBi","Kiemke")">Danh sách thiết bị</a>
                 </li>
                 <li class="list-inline-item mb-0" style="border-bottom:3px solid green;background-color:white"><a href="@Url.Action("KiemKe","Kiemke")">Kiểm kê</a></li>
-                <li class="list-inline-item mb-0"><a href="#">Thanh lý</a></li>
+                <li class="list-inline-item mb-0"><a href="@Url.Action("ThanhLy","Kiemke")">Thanh lý</a></li>
 
             </ul>
         </div>
@@ -44,9 +44,11 @@
                 {
                     <tr>
                         <td>
-                            @item.ID_PHIEUGNHH
+                            <p name="ID">     @item.ID_PHIEUGNHH</p>
+                       
                         </td>
                         <td>
+                           
                             @item.NGAYLAP
                         </td>
                         <td>
