--- a/QL_ThietBi/QL_ThietBi/Views/Home/Index.cshtml
+++ b/QL_ThietBi/QL_ThietBi/Views/Home/Index.cshtml
@@ -1,8 +1,8 @@
 ﻿
 @{
     ViewBag.Title = "Index";
-    Layout = "~/Views/Shared/TrangChu.cshtml";
+    Layout = "~/Views/Shared/DN.cshtml";
 }
 
-<h2>Index</h2>
+
 
