--- a/QL_ThietBi/QL_ThietBi/Views/Shared/DN.cshtml
+++ b/QL_ThietBi/QL_ThietBi/Views/Shared/DN.cshtml
@@ -24,7 +24,7 @@
                     <img class="card-img-top" src="~/Content/Image/team.png" alt="Card image" style="width:100%">
                     <div class="card-body">
 
-                        <a href="#" class="btn btn-primary">Đăng nhập</a>
+                        <a href="@Url.Action("Login","DangNhap")"  class="btn btn-primary">Đăng nhập</a>
                     </div>
                 </div>
             </div>
@@ -37,7 +37,7 @@
                     <div class="card-body">
 
 
-                        <a href="#" class="btn btn-primary">Đăng nhập</a>
+                        <a href="@Url.Action("LoginNV","DangNhap")" class="btn btn-primary">Đăng nhập</a>
                     </div>
                 </div>
             </div>
