--- a/QL_ThietBi/QL_ThietBi/Views/Kiemke/CT_DSHuHong.cshtml
+++ b/QL_ThietBi/QL_ThietBi/Views/Kiemke/CT_DSHuHong.cshtml
@@ -13,13 +13,14 @@
                     <a href="@Url.Action("DS_ThietBi","Kiemke")">Danh sách thiết bị</a>
                 </li>
                 <li class="list-inline-item mb-0" style="border-bottom:3px solid green;background-color:white"><a href="@Url.Action("KiemKe","Kiemke")">Kiểm kê</a></li>
-                <li class="list-inline-item mb-0"><a href="@Url.Action("ThanhLy","Kiemke")">Thanh lý</a></li>
+                @*<li class="list-inline-item mb-0"><a href="@Url.Action("ThanhLy","Kiemke")">Thanh lý</a></li>*@
 
             </ul>
         </div>
     </div>
     <div class="row m-3 text-center">
         <h4 class="text-primary">DANH SÁCH THIẾT BỊ HƯ HỎNG</h4>
+        <h5 class="text-danger">@Session["Error"]</h5>
 
     </div>
     <div class="row m-3">
