--- a/QL_ThietBi/QL_ThietBi/Views/Shared/DN.cshtml
+++ b/QL_ThietBi/QL_ThietBi/Views/Shared/DN.cshtml
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title - My ASP.NET Application</title>
-    <link href="~/Content/bootstrap-5.0.2-dist/css/bootstrap.min.css" rel="stylesheet"></link>
+    <link href="~/Content/bootstrap-5.0.2-dist/css/bootstrap.min.css" rel="stylesheet">
     @*@Styles.Render("~/Content/css")
         @Scripts.Render("~/bundles/modernizr")*@
 </head>
@@ -24,7 +24,7 @@
                     <img class="card-img-top" src="~/Content/Image/team.png" alt="Card image" style="width:100%">
                     <div class="card-body">
 
-                        <a href="#" class="btn btn-primary">Đăng nhập</a>
+                        <a href="/DangNhap/Login" class="btn btn-primary">Đăng nhập</a>
                     </div>
                 </div>
             </div>
@@ -37,7 +37,7 @@
                     <div class="card-body">
 
 
-                        <a href="#" class="btn btn-primary">Đăng nhập</a>
+                        <a href="/DangNhap/LoginNV" class="btn btn-primary">Đăng nhập</a>
                     </div>
                 </div>
             </div>
