--- a/QL_ThietBi/QL_ThietBi/Views/Shared/TrangChu.cshtml
+++ b/QL_ThietBi/QL_ThietBi/Views/Shared/TrangChu.cshtml
@@ -1,4 +1,5 @@
-﻿<!DOCTYPE html>
+﻿
+<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8" />
@@ -22,10 +23,20 @@
             <div class="user-info" id="userDropdown">
 
                 <img src="~/Content/Image/user.png" alt="Biểu tượng người dùng" id="userIcon">
-                <span class="username">Tên người dùng</span>
+                @{
+                    if (Session["TenNV"] != null)
+                    {
+                        <span class="username">@Session["TenNV"]</span>
+                    }
+                    else if (Session["TenGV"] != null)
+                    {
+                        <span class="username">@Session["TenGV"]</span>
+                    }
+                }
+               
                 <div class="dropdown-content" id="dropdownContent">
-                    <a href="#">Đổi mật khẩu</a>
-                    <a href="#">Đăng xuất</a>
+                    <a href="/DangNhap/ChangePass">Đổi mật khẩu</a>
+                    <a href="/DangNhap/Logout">Đăng xuất</a>
                 </div>
 
 
@@ -61,7 +72,7 @@
 
 
     </div>
-    </div>
+    
     <footer style="width:100%;height: 200px; background-color: rgb(12, 11, 40)">
         <div class="container p-5">
             <ul class="list-group text-center">
@@ -80,15 +91,15 @@
     <script src="~/Content/bootstrap-5.0.2-dist/js/bootstrap.bundle.min.js"></script>
     <script>
         document.getElementById("userDropdown").addEventListener("click", function () {
-    var dropdownContent = document.getElementById("dropdownContent");
+            var dropdownContent = document.getElementById("dropdownContent");
 
-   
-    if (dropdownContent.style.display === "block") {
-        dropdownContent.style.display = "none";
-    } else {
-        dropdownContent.style.display = "block";
-    }
-});
+
+            if (dropdownContent.style.display === "block") {
+                dropdownContent.style.display = "none";
+            } else {
+                dropdownContent.style.display = "block";
+            }
+        });
     </script>
 
 </body>
