--- a/QL_ThietBi/QL_ThietBi/Views/Shared/_Layout.cshtml
+++ b/QL_ThietBi/QL_ThietBi/Views/Shared/_Layout.cshtml
@@ -1,10 +1,11 @@
-﻿<!DOCTYPE html>
+﻿
+<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title - My ASP.NET Application</title>
-    <link href="~/Content/bootstrap-5.0.2-dist/css/bootstrap.min.css" rel="stylesheet"></link>
+    <link href="~/Content/bootstrap-5.0.2-dist/css/bootstrap.min.css" rel="stylesheet">
     @*@Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")*@
 </head>
@@ -24,7 +25,7 @@
                     <img class="card-img-top" src="~/Content/Image/team.png" alt="Card image" style="width:100%">
                     <div class="card-body">
 
-                        <a href="#" class="btn btn-primary">Đăng nhập</a>
+                        <a href="/DangNhap/Login" class="btn btn-primary">Đăng nhập</a>
                     </div>
                 </div>
             </div>
